manifests/app/fuse-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product-catalog-fuse
    app.kubernetes.io/component: product-catalog-fuse
    app.kubernetes.io/instance: product-catalog-fuse
    app.kubernetes.io/name: product-catalog-fuse
    app.kubernetes.io/part-of: product-catalog
    app.openshift.io/runtime: camel
  name: product-catalog-fuse
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: jolokia
    port: 8081
    protocol: TCP
    targetPort: 8081    
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: prometheus
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    deployment: product-catalog-fuse
  sessionAffinity: None
  type: ClusterIP
